--- a/use/ansible/roles/js/vars/main.yml
+++ b/use/ansible/roles/js/vars/main.yml
@@ -1,6 +1,6 @@
 # Version des outils JavaScript
-workstation_tools_nvm_version: v0.32.1
-workstation_tools_node_version: v5.6.0
+workstation_tools_nvm_version: v0.33.1
+workstation_tools_node_version: v6.10.1
 workstation_tools_phantomjs_version : 2.1.1
 
 # Git repositories
@@ -10,6 +10,7 @@ git_repo_nvm: https://github.com/creationix/nvm.git
 workstation_npm_packages:
   - {name: 'gulp-cli', version: '1.2.2'}
   - {name: 'grunt-cli', version: '1.2.0'}
+  - {name: '@angular/cli', version: '1.x'}
 
 # PhantomJS
 download_url_phantomjs: "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-{{ workstation_tools_phantomjs_version }}-{{ ansible_system | lower }}-{{ ansible_architecture }}.tar.bz2"
@@ -24,5 +25,5 @@ workstation_system_build_packages :
   - fontforge
 
 workstation_gem_packages:
-  - {name: 'compass'}
+  - {name: 'sass'}
   - {name: 'bundler'}
